# Sycamore

./: .eslintrc.cjs  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
electron/: export-template.ts  main.ts  preload.ts
scripts/: generate-icon.cjs
src/: App.tsx  constants.ts  electron-api.ts  global.d.ts  index.css  main.tsx  tauri-api.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  menu.rs  window.rs
src-tauri/src/commands/: dialog.rs  fs.rs  mod.rs  pdf.rs  window.rs
src-tauri/src/utils/: export_template.rs  mod.rs
src/components/: AiChatPanel.tsx  ChartDialog.tsx  Dialogs.tsx  FilePicker.tsx  FormulaDialog.tsx  SelectionToolbar.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  Toolbar.tsx  UnsavedDialog.tsx  WelcomePage.tsx  WindowControls.tsx
src/editor/: Editor.tsx  MathBlockView.tsx  MathInlineView.tsx
src/editor/extensions/: edit-highlight.ts  image-extension.ts  math-block.ts  math-inline.ts  mermaid-extension.tsx  slash-menu.ts  wiki-link.ts
src/hooks/: useAutoSave.ts  useConversations.ts  useDialogs.ts  useFileSystem.ts  useSettings.ts  useTheme.ts  useUnsavedGuard.ts
src/utils/: condense.ts  editor-styles.ts  emitter.ts  images.ts  markdown-convert.ts  openai.ts  token-counter.ts
